--- a/src/style.css
+++ b/src/style.css
@@ -60,6 +60,11 @@ body{
     cursor: pointer;
 }
 
+.container button:hover {
+    background-color: #ff5fa1;
+    transition: background-color 0.3s ease;
+}
+
 .container button.hidden{
     background-color: transparent;
     border-color: #fff;
@@ -153,6 +158,11 @@ body{
     transition: all 0.6s ease-in-out;
     border-radius: 150px 0 0 100px;
     z-index: 1000;
+}
+
+.toggle-panel button:hover {
+    background-color: #fda4c9;
+    transition: background-color 0.3s ease;
 }
 
 .container.active .toggle-container{
